Apply changes found by IntelliJ inspections